--- a/Scripts/cert-auto.yml
+++ b/Scripts/cert-auto.yml
@@ -115,7 +115,7 @@ jobs:
           clientid: ${{ inputs.group_idp_client_id }}
           privatekey: ${{ env.GROUP_IDP_PRIVATE_KEY  }}
           command: ${{ inputs.cert_action }} 
-          data: '{"subject":"${{ inputs.cert_name }}", "includechain":"true", "includeprivatekey": "true", "password":"${{ env.CERT_PASSWORD }}"}'
+          data: '{"subject":"${{ inputs.cert_name }}", "includechain":"true", "cadn": "sha2-g3", " "includeprivatekey": "true", "password":"${{ env.CERT_PASSWORD }}"}'
           download: true
           encode: false
           prod: ${{ env.isProd }} 
