--- a/Scripts/err.yml
+++ b/Scripts/err.yml
@@ -1,3 +1,24 @@
+Run # Read the content of the SAN JSON file into an environment variable
+  # Read the content of the SAN JSON file into an environment variable
+  SAN_JSON=$(cat ./san_json.json)
+  echo "SAN_JSON=${SAN_JSON}" >> $GITHUB_ENV
+  echo "SAN_JSON read from file and passed as environment variable."
+  shell: /usr/bin/bash -e {0}
+  env:
+    AWS_DEFAULT_REGION: ap-southeast-2
+    AWS_REGION: ap-southeast-2
+    AWS_ACCESS_KEY_ID: ***
+    AWS_SECRET_ACCESS_KEY: ***
+    AWS_SESSION_TOKEN: ***
+    GROUP_IDP_PRIVATE_KEY: ***
+    CERT_PASSWORD: ***
+    SECRETS_LIST_CLEAN_UP: ["GROUP_IDP_PRIVATE_KEY","CERT_PASSWORD"]
+    isProd: false
+SAN_JSON read from file and passed as environment variable.
+Error: Unable to process file command 'env' successfully.
+Error: Invalid format '  {'
+
+
 # Read the SAN_JSON from the temporary file and store it in a GitHub environment variable
 - name: Read SAN_JSON from temporary file and pass as environment variable
   id: read-san-json
